# tiny-db

./: .gitignore  CMakeLists.txt  README.md
include/: column.h  database.h  datatype.h  query.h  record.h  schema.h  table.h  value.h
src/: column.cpp  column.h  database.cpp  database.h  datatype.h  main.cpp  query.cpp  query.h  record.cpp  record.h  schema.cpp  schema.h  table.cpp  table.h  value.cpp
